--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "boldo",
+  "name": "boldo-iota",
   "version": "2.0.0",
   "private": true,
   "engines": {
     "node": "20.x",
     "npm": "9.x"
   },
-  "homepage": "https://boldo-by-andrew.vercel.app/",
+  "homepage": "https://boldo-iota.vercel.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
